--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hi! I'm Varoun, a rising software developer.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from New York.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I'm a very avid tennis player. I also love cooking and reading. I'm currently taking up golf and surfing too. </p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Sales Engineer! I'd like to bridge the gap between clients needs and development.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I'm currently based in San Diego, CA.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I like the flexibility and the freedom that coding brings. There are so many opportunites to innovate and create technology that can make an impact.</p>
     </section>
 
     <footer id="footer">
